[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Character/bullsquid64.png" type="Texture" id=1]
[ext_resource path="res://Objects/Models/Model.gd" type="Script" id=2]
[ext_resource path="res://Objects/Graphics/outline.shader" type="Shader" id=3]
[ext_resource path="res://Sprites/particles/blood_scat1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Character/legs.png" type="Texture" id=5]
[ext_resource path="res://Sfx/walk1.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 31.0527

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("leg2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.92285, 4.82449 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("leg2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("leg1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.942424, 2.81537 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("leg1:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("skin:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, 0.0 ]
}

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/clr = null
shader_param/tex_size = Vector2( 64, 64 )
shader_param/out_size = 1.0
shader_param/use = 0.0

[sub_resource type="Animation" id=5]
resource_name = "melee"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("skin:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, 45.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "zombie_attk"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("skin:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, -15.0, 0.0 ]
}

[node name="bull_sqid" type="CollisionShape2D"]
z_index = 2
z_as_relative = false
shape = SubResource( 1 )
script = ExtResource( 2 )

[node name="walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -1.51
max_distance = 800.0
attenuation = 1.27456

[node name="walking" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/walking = SubResource( 3 )

[node name="leg1" type="Sprite" parent="."]
position = Vector2( 4.48426, -2.9895 )
scale = Vector2( 1.40538, 1.46329 )
z_index = -1
texture = ExtResource( 5 )

[node name="leg2" type="Sprite" parent="."]
position = Vector2( -6.1451, 10.4633 )
scale = Vector2( 1.57911, 1.57911 )
z_index = -1
texture = ExtResource( 5 )

[node name="blood_scat" type="Sprite" parent="."]
visible = false
position = Vector2( 7.61944, -3.84794 )
scale = Vector2( 0.372423, 0.331879 )
z_index = -2
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="blood_scat"]
position = Vector2( -38.9172, -40.4954 )

[node name="skin" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 0.759185, 8.57168 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="sfist" type="Node2D" parent="skin"]
position = Vector2( 1.27866, -8.28313 )
rotation = 1.5708
scale = Vector2( 1.33333, 1.33333 )

[node name="pfist" type="Node2D" parent="skin"]
position = Vector2( 0.607859, -22.5676 )
rotation = 1.5708
scale = Vector2( 1.33333, 1.33333 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/melee = SubResource( 5 )
anims/zombie_attk = SubResource( 6 )

[node name="mele_delay" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
